# my_fuzzer

./: .gitignore  CMakeLists.txt  main.c
include/: fuzz.h  mutator.h
src/: fuzz.c  mutator.c
